--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a href="https://github.com/teja-tummala" target="_blank" class="social-link">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="mailto:teja.tummala@email.com" class="social-link">
+                        <a href="mailto:tummalatejaram@gmail.com" class="social-link">
                             <i class="fas fa-envelope"></i>
                         </a>
                     </div>
@@ -426,11 +426,11 @@
                         <div class="contact-methods">
                             <div class="contact-method">
                                 <i class="fas fa-envelope"></i>
-                                <span>teja.tummala@email.com</span>
+                                <span>tummalatejaram@gmail.com</span>
                             </div>
                             <div class="contact-method">
                                 <i class="fab fa-linkedin"></i>
-                                <a href="https://linkedin.com/in/teja-tummala" target="_blank">LinkedIn Profile</a>
+                                <a href="https://linkedin.com/in/teja-tummala-86abb3192" target="_blank">LinkedIn Profile</a>
                             </div>
                             <div class="contact-method">
                                 <i class="fab fa-github"></i>
@@ -461,7 +461,7 @@
                     <a href="https://github.com/teja-tummala" target="_blank" class="social-link">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="mailto:teja.tummala@email.com" class="social-link">
+                    <a href="mailto:tummalatejaram@gmail.com" class="social-link">
                         <i class="fas fa-envelope"></i>
                     </a>
                 </div>
