Complete redesign with new layout and cursor animations

--- a/index.html
+++ b/index.html
@@ -33,60 +33,95 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
+        <div class="cursor-glow"></div>
+        <div class="floating-particles">
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+        </div>
         <div class="hero-container">
             <div class="hero-content">
                 <div class="hero-text">
                     <h1 class="hero-title">
-                        <span class="title-line">Hi, I'm</span>
+                        <span class="title-greeting">Hello World, I'm</span>
                         <span class="title-name">Teja Tummala</span>
-                        <span class="title-role">Angular Developer</span>
+                        <span class="title-role">Senior Angular Developer</span>
+                        <span class="title-subtitle">Crafting Digital Experiences</span>
                     </h1>
                     <p class="hero-description">
-                        Passionate Frontend Developer with 3.6 years of experience crafting exceptional user experiences with Angular, TypeScript, and modern web technologies.
+                        Passionate Frontend Developer with 3.6+ years of experience creating exceptional digital experiences. Specialized in Angular, TypeScript, and cutting-edge web technologies.
                     </p>
                     <div class="hero-buttons">
-                        <a href="#projects" class="btn btn-primary">View Projects</a>
+                        <a href="#projects" class="btn btn-primary">
+                            <span>Explore Work</span>
+                            <i class="fas fa-arrow-right"></i>
+                        </a>
                         <a href="./public/Teja_Tummala_Angular.pdf" download class="btn btn-secondary">
                             <i class="fas fa-download"></i>
-                            Download Resume
+                            <span>Get Resume</span>
                         </a>
                     </div>
-                    <div class="social-links">
-                        <a href="https://linkedin.com/in/teja-tummala" target="_blank" class="social-link">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                        <a href="https://github.com/teja-tummala" target="_blank" class="social-link">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="mailto:tummalatejaram@gmail.com" class="social-link">
-                            <i class="fas fa-envelope"></i>
-                        </a>
+                    <div class="hero-stats">
+                        <div class="stat-item">
+                            <span class="stat-number">3.6+</span>
+                            <span class="stat-label">Years Experience</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">20+</span>
+                            <span class="stat-label">Projects Delivered</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">100%</span>
+                            <span class="stat-label">Client Satisfaction</span>
+                        </div>
                     </div>
                 </div>
                 <div class="hero-visual">
-                    <div class="floating-card">
-                        <div class="card-content">
-                            <i class="fab fa-angular"></i>
-                            <span>Angular Expert</span>
+                    <div class="tech-orbit">
+                        <div class="orbit-center">
+                            <div class="profile-avatar">
+                                <i class="fas fa-code"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="floating-card">
-                        <div class="card-content">
-                            <i class="fab fa-js-square"></i>
-                            <span>TypeScript</span>
+                        <div class="orbit-ring ring-1">
+                            <div class="tech-icon angular">
+                                <i class="fab fa-angular"></i>
+                            </div>
+                            <div class="tech-icon typescript">
+                                <i class="fab fa-js-square"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="floating-card">
-                        <div class="card-content">
-                            <i class="fas fa-code"></i>
-                            <span>3.6 Years</span>
+                        <div class="orbit-ring ring-2">
+                            <div class="tech-icon react">
+                                <i class="fab fa-react"></i>
+                            </div>
+                            <div class="tech-icon node">
+                                <i class="fab fa-node-js"></i>
+                            </div>
+                            <div class="tech-icon git">
+                                <i class="fab fa-git-alt"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="hero-bg">
-            <div class="bg-animation"></div>
+            <div class="social-sidebar">
+                <a href="https://linkedin.com/in/teja-tummala-86abb3192" target="_blank" class="social-link">
+                    <i class="fab fa-linkedin"></i>
+                    <span class="social-tooltip">LinkedIn</span>
+                </a>
+                <a href="https://github.com/teja-tummala" target="_blank" class="social-link">
+                    <i class="fab fa-github"></i>
+                    <span class="social-tooltip">GitHub</span>
+                </a>
+                <a href="mailto:tummalatejaram@gmail.com" class="social-link">
+                    <i class="fas fa-envelope"></i>
+                    <span class="social-tooltip">Email</span>
+                </a>
+                <div class="social-line"></div>
+            </div>
         </div>
     </section>
 
