--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 
     <!-- Social Sidebar -->
     <div class="social-sidebar">
-        <a href="https://github.com/tejatummala" target="_blank" class="social-link">
+        <a href="https://github.com/Teja-Tummala" target="_blank" class="social-link">
             <i class="fab fa-github"></i>
             <span class="social-tooltip">GitHub</span>
         </a>
-        <a href="https://linkedin.com/in/teja-tummala" target="_blank" class="social-link">
+        <a href="https://linkedin.com/in/teja-tummala-86abb3192" target="_blank" class="social-link">
             <i class="fab fa-linkedin-in"></i>
             <span class="social-tooltip">LinkedIn</span>
         </a>
-        <a href="mailto:tejatummala@gmail.com" class="social-link">
+        <a href="mailto:tummalatejaram@gmail.com" class="social-link">
             <i class="fas fa-envelope"></i>
             <span class="social-tooltip">Email</span>
         </a>
@@ -369,15 +369,15 @@
                     <div class="contact-methods">
                         <div class="contact-method">
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:tejatummala@gmail.com">tejatummala@gmail.com</a>
+                            <a href="mailto:tummalatejaram@gmail.com">tummalatejaram@gmail.com</a>
                         </div>
                         <div class="contact-method">
                             <i class="fab fa-linkedin"></i>
-                            <a href="https://linkedin.com/in/teja-tummala" target="_blank">linkedin.com/in/teja-tummala</a>
+                            <a href="https://linkedin.com/in/teja-tummala-86abb3192" target="_blank">linkedin.com/in/teja-tummala-86abb3192</a>
                         </div>
                         <div class="contact-method">
                             <i class="fab fa-github"></i>
-                            <a href="https://github.com/tejatummala" target="_blank">github.com/tejatummala</a>
+                            <a href="https://github.com/Teja-Tummala" target="_blank">github.com/Teja-Tummala</a>
                         </div>
                     </div>
                     <div class="resume-download">
@@ -397,13 +397,13 @@
             <div class="footer-content">
                 <p>&copy; 2024 Teja Tummala. All rights reserved.</p>
                 <div class="footer-social">
-                    <a href="https://github.com/tejatummala" target="_blank" class="social-link">
+                    <a href="https://github.com/Teja-Tummala" target="_blank" class="social-link">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://linkedin.com/in/teja-tummala" target="_blank" class="social-link">
+                    <a href="https://linkedin.com/in/teja-tummala-86abb3192" target="_blank" class="social-link">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="mailto:tejatummala@gmail.com" class="social-link">
+                    <a href="mailto:tummalatejaram@gmail.com" class="social-link">
                         <i class="fas fa-envelope"></i>
                     </a>
                 </div>
